--- a/src/main/webapp/member/chill-home-header.html
+++ b/src/main/webapp/member/chill-home-header.html
@@ -7,10 +7,12 @@
         <title>Resido - Residence & Real Estate HTML Template</title>	
 		
         <!-- Custom CSS -->
-        <link href="./_html/assets/css/styles.css" rel="stylesheet">
+        <!-- <link href="./_html/assets/css/styles.css" rel="stylesheet"> -->
+		<link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
 		
 		<!-- Custom Color Option -->
-		<link href="./_html/assets/css/chill-header.css" rel="stylesheet">
+		<!-- <link href="./_html/assets/css/chill-header.css" rel="stylesheet"> -->
+		<link href="../Full_Resido/_html/assets/css/chill-header.css" rel="stylesheet">
 		
     </head>
 	
@@ -263,18 +265,30 @@
 		<!-- ============================================================== -->
 		<!-- All Jquery -->
 		<!-- ============================================================== -->
-		<script src="./_html/assets/js/jquery.min.js"></script>
-		<script src="./_html/assets/js/popper.min.js"></script>
-		<script src="./_html/assets/js/bootstrap.min.js"></script>
-		<script src="./_html/assets/js/rangeslider.js"></script>
-		<script src="./_html/assets/js/select2.min.js"></script>
-		<script src="./_html/assets/js/jquery.magnific-popup.min.js"></script>
-		<script src="./_html/assets/js/slick.js"></script>
-		<script src="./_html/assets/js/slider-bg.js"></script>
-		<script src="./_html/assets/js/lightbox.js"></script> 
-		<script src="./_html/assets/js/imagesloaded.js"></script>
+		<!-- <script src="./_html/assets/js/jquery.min.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/jquery.min.js"></script>
+		<!-- <script src="./_html/assets/js/popper.min.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/popper.min.js"></script>
+		<!-- <script src="./_html/assets/js/bootstrap.min.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/bootstrap.min.js"></script>
+		<!-- <script src="./_html/assets/js/rangeslider.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/rangeslider.js"></script>
+		<!-- <script src="./_html/assets/js/select2.min.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/select2.min.js"></script>
+		<!-- <script src="./_html/assets/js/jquery.magnific-popup.min.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/jquery.magnific-popup.min.js"></script>
+		<!-- <script src="./_html/assets/js/slick.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/slick.js"></script>
+		<!-- <script src="./_html/assets/js/slider-bg.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/slider-bg.js"></script>
+		<!-- <script src="./_html/assets/js/lightbox.js"></script>  -->
+		<script src="../Full_Resido/_html/assets/js/lightbox.js"></script> 
+		<!-- <script src="./_html/assets/js/imagesloaded.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/imagesloaded.js"></script>
 		 
-		<script src="./_html/assets/js/custom.js"></script>
+		<!-- <script src="./_html/assets/js/custom.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/custom.js"></script>
+
 		<!-- ============================================================== -->
 		<!-- This page plugins -->
 		<!-- ============================================================== -->
