--- a/src/main/webapp/member/supplier-register.html
+++ b/src/main/webapp/member/supplier-register.html
@@ -7,11 +7,15 @@
         <title>供應商註冊</title>	
 		
         <!-- Custom CSS -->
-        <link href="./_html/assets/css/styles.css" rel="stylesheet">
+        <!-- <link href="./_html/assets/css/styles.css" rel="stylesheet"> -->
+		<link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
 		
 		<!-- Custom Color Option -->
-		<link href="./_html/assets/css/colors.css" rel="stylesheet">
-		<link href="./_html/assets/css/index.css" rel="stylesheet">
+		<!-- <link href="./_html/assets/css/colors.css" rel="stylesheet"> -->
+		<link href="../Full_Resido/_html/assets/css/colors.css" rel="stylesheet">
+		<!-- <link href="./_html/assets/css/index.css" rel="stylesheet"> -->
+		<!-- <link href="../Full_Resido/_html/assets/css/index.css" rel="stylesheet"> -->
+		<link href="./css/index.css" rel="stylesheet">
 		
     </head>
 	
@@ -187,20 +191,35 @@
 		<!-- ============================================================== -->
 		<!-- All Jquery -->
 		<!-- ============================================================== -->
-		<script src="./_html/assets/js/jquery.min.js"></script>
-		<script src="./_html/assets/js/popper.min.js"></script>
-		<script src="./_html/assets/js/bootstrap.min.js"></script>
-		<script src="./_html/assets/js/rangeslider.js"></script>
-		<script src="./_html/assets/js/select2.min.js"></script>
-		<script src="./_html/assets/js/jquery.magnific-popup.min.js"></script>
-		<script src="./_html/assets/js/slick.js"></script>
-		<script src="./_html/assets/js/slider-bg.js"></script>
-		<script src="./_html/assets/js/lightbox.js"></script> 
-		<script src="./_html/assets/js/imagesloaded.js"></script>
+		<!-- <script src="./_html/assets/js/jquery.min.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/jquery.min.js"></script>
+		<!-- <script src="./_html/assets/js/popper.min.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/popper.min.js"></script>
+		<!-- <script src="./_html/assets/js/bootstrap.min.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/bootstrap.min.js"></script>
+		<!-- <script src="./_html/assets/js/rangeslider.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/rangeslider.js"></script>
+		<!-- <script src="./_html/assets/js/select2.min.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/select2.min.js"></script>
+		<!-- <script src="./_html/assets/js/jquery.magnific-popup.min.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/jquery.magnific-popup.min.js"></script>
+		<!-- <script src="./_html/assets/js/slick.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/slick.js"></script>
+		<!-- <script src="./_html/assets/js/slider-bg.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/slider-bg.js"></script>
+		<!-- <script src="./_html/assets/js/lightbox.js"></script>  -->
+		<script src="../Full_Resido/_html/assets/js/lightbox.js"></script> 
+		<!-- <script src="./_html/assets/js/imagesloaded.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/imagesloaded.js"></script>
 		 
-		<script src="./_html/assets/js/custom.js"></script>
-		<script src="./_html/assets/js/index-ernie.js"></script>
-		<script src="./_html/assets/js/loginmodal.js"></script>
+		<!-- <script src="./_html/assets/js/custom.js"></script> -->
+		<script src="../Full_Resido/_html/assets/js/custom.js"></script>
+		<!-- <script src="./_html/assets/js/index-ernie.js"></script> -->
+		<!-- <script src="../Full_Resido/_html/assets/js/index-ernie.js"></script> -->
+		<script src="./js/index-ernie.js"></script>
+		<!-- <script src="./_html/assets/js/loginmodal.js"></script> -->
+		<!-- <script src="../Full_Resido/_html/assets/js/loginmodal.js"></script> -->
+		<script src="./js/loginmodal.js"></script>
 		<!-- ============================================================== -->
 		<!-- This page plugins -->
 		<!-- ============================================================== -->
