--- a/src/main/webapp/activity/input.html
+++ b/src/main/webapp/activity/input.html
@@ -79,6 +79,10 @@
                 </div>
                 <!-- /.form group -->
                 <div class="form-group">
+                  <label for="supplierId">供應商編號 <span style="color: red;">*</span></label>
+                  <input type="number" name="supplierId" class="form-control"  placeholder="供應商編號" min="0" max="1000000" required>
+                </div>
+                <div class="form-group">
                   <label for="unitPrice">參加費用 <span style="color: red;">*</span></label>
                   <input type="number" name="unitPrice" class="form-control"  placeholder="參加費用" min="0" max="1000000" required>
                 </div>
