update member login function

--- a/src/main/webapp/member/register.html
+++ b/src/main/webapp/member/register.html
@@ -108,7 +108,7 @@
 		<!-- ============================================================== -->
 		<!-- <script src="./_html/assets/js/jquery.min.js"></script> -->
 		<!-- <script src="./_html/assets/js/jquery.min-ernie.js"></script> -->
-		<script src="../Full_Resido/_html/assets/js/jquery.min-ernie.js"></script>
+		<script src="./js/jquery.min-ernie.js"></script>
 		<!-- <script src="./_html/assets/js/popper.min.js"></script> -->
 		<script src="../Full_Resido/_html/assets/js/popper.min.js"></script>
 		<!-- <script src="./_html/assets/js/bootstrap.min.js"></script> -->
