update supplier register & context JNDI

--- a/src/main/webapp/member/member-register.html
+++ b/src/main/webapp/member/member-register.html
@@ -206,7 +206,7 @@
 		<!-- <script src="./_html/assets/js/loginmodal.js"></script> -->
 		<!-- <script src="../Full_Resido/_html/assets/js/loginmodal.js"></script> -->
 		<script src="./js/loginmodal.js"></script>
-		<script src="./js/register.js"></script>
+		<script src="./js/member-register.js"></script>
 
 		
 		<!-- ============================================================== -->
