--- a/src/main/webapp/member/supplier-register.html
+++ b/src/main/webapp/member/supplier-register.html
@@ -77,8 +77,8 @@
 											<tr>
 											<div class="col-lg-6 col-md-6">
 												<div class="form-group mb-3">
-													<label>名字</label>
-													<input type="text" class="form-control" placeholder="請輸入姓名">
+													<label>供應商名稱</label>
+													<input type="text" class="form-control" id="supplier_name" placeholder="請輸入供應商名稱">
 												</div>
 											</div>
 											</tr>
@@ -87,7 +87,7 @@
 											<div class="col-lg-6 col-md-6 mb-3">
 												<div class="form-group">
 													<label>Email</label>
-													<input type="email" class="form-control" placeholder="請輸入Email">
+													<input type="email" class="form-control" id="email" placeholder="請輸入Email">
 												</div>
 											</div>
 											</tr>
@@ -96,7 +96,7 @@
 											<div class="col-lg-6 col-md-6 mb-3">
 												<div class="form-group">
 													<label>密碼</label>
-													<input type="password" class="form-control" placeholder="*******">
+													<input type="password" class="form-control" id="passowrd" placeholder="*******">
 												</div>
 											</div>
 											</tr>
@@ -105,7 +105,7 @@
 											<div class="col-lg-6 col-md-6 mb-3">
 												<div class="form-group">
 													<label>確認密碼</label>
-													<input type="password" class="form-control" placeholder="*******">
+													<input type="password" class="form-control" id="cPassword" placeholder="*******">
 												</div>
 											</div>
 											</tr>
@@ -114,7 +114,7 @@
 												<div class="col-lg-6 col-md-6 mb-3">
 													<div class="form-group">
 														<label>身分證</label>
-														<input type="text" class="form-control" placeholder="請輸入身分證">
+														<input type="text" class="form-control" id="id_number" placeholder="請輸入身分證">
 													</div>
 												</div>
 												</tr>
@@ -123,7 +123,7 @@
 											<div class="col-lg-6 col-md-6 mb-3">
 												<div class="form-group">
 													<label>手機</label>
-													<input type="tel" class="form-control" placeholder="請輸入手機">
+													<input type="tel" class="form-control" id="phone" placeholder="請輸入手機">
 												</div>
 											</div>
 											</tr>
@@ -142,7 +142,7 @@
 										</div>
 										
 										<div class="form-group">
-											<button type="submit" class="btn btn-primary full-width fw-medium">建立帳戶<i class="fa-solid fa-arrow-right-long ms-2"></i></button>
+											<button type="submit" class="btn btn-primary full-width fw-medium" id="build">建立帳戶<i class="fa-solid fa-arrow-right-long ms-2"></i></button>
 										</div>
 									
 									</form>
@@ -220,6 +220,7 @@
 		<!-- <script src="./_html/assets/js/loginmodal.js"></script> -->
 		<!-- <script src="../Full_Resido/_html/assets/js/loginmodal.js"></script> -->
 		<script src="./js/loginmodal.js"></script>
+		<script src="./js/supplier-register.js"></script>
 		<!-- ============================================================== -->
 		<!-- This page plugins -->
 		<!-- ============================================================== -->
