--- a/src/main/webapp/chilltribe.html
+++ b/src/main/webapp/chilltribe.html
@@ -207,9 +207,8 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-7 col-md-10 text-center">
                         <div class="sec-heading center">
-                            <h2>Recent Property For Rent</h2>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-                                voluptatum deleniti atque corrupti quos dolores</p>
+                            <h2>熱門活動推薦</h2>
+                            <p>即刻發現最新最夯的活動，讓你不錯過任何精彩！</p>
                         </div>
                     </div>
                 </div>
@@ -218,12 +217,13 @@
                     <div class="col-lg-12 col-md-12">
                         <div class="property-slide btm">
 
-                            <!-- Single Property -->
+                            <!-- Single Property 以一個活動為單位-->
                             <div class="single-items">
                                 <div class="property-listing card border rounded-3">
 
                                     <div class="listing-img-wrapper p-3">
                                         <div class="list-img-slide position-relative">
+                                            <!-- tag -->
                                             <div class="position-absolute top-0 left-0 ms-3 mt-3 z-1">
                                                 <div
                                                     class="label bg-success text-light d-inline-flex align-items-center justify-content-center">
@@ -240,6 +240,7 @@
                                                     </span>Verified
                                                 </div>
                                             </div>
+                                            <!-- 活動圖片 -->
                                             <div class="click rounded-3 overflow-hidden mb-0">
                                                 <div><a href="single-property-1.html"><img
                                                             src="https://placehold.co/1200x800" class="img-fluid"
@@ -258,15 +259,18 @@
                                         <div class="listing-detail-wrapper">
                                             <div class="listing-short-detail-wrap">
                                                 <div class="listing-short-detail">
+                                                    <!-- 次標籤 -->
                                                     <div class="d-flex align-items-center">
                                                         <span
                                                             class="label bg-light-success text-success prt-type me-2">For
                                                             Rent</span><span
                                                             class="label bg-light-purple text-purple property-cats">Apartment</span>
                                                     </div>
+                                                    <!-- 活動標題 -->
                                                     <h4 class="listing-name fw-semibold fs-5 mb-1"><a
                                                             href="single-property-1.html">The Green Canton Chrysler</a>
                                                     </h4>
+                                                    <!-- 活動地點 -->
                                                     <div class="prt-location text-muted-2">
                                                         <span class="svg-icon svg-icon-2hx">
                                                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none"
@@ -284,7 +288,7 @@
                                                 </div>
                                             </div>
                                         </div>
-
+                                        <!-- 額外顯示的資訊 -->
                                         <div class="price-features-wrapper">
                                             <div
                                                 class="list-fx-features d-flex align-items-center justify-content-between">
@@ -305,7 +309,7 @@
                                                 </div>
                                             </div>
                                         </div>
-
+                                        <!-- 費用 及 跳轉Button -->
                                         <div
                                             class="listing-detail-footer d-flex align-items-center justify-content-between py-4">
                                             <div class="listing-short-detail-flex">
@@ -1399,129 +1403,16 @@
         <!-- ============================ Listing Grid Item ================================== -->
 
         <!-- ============================ Call To Action ================================== -->
-        <!-- <section class="bg-primary call-to-act-wrap">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-
-                        <div class="call-to-act">
-                            <div class="call-to-act-head">
-                                <h3>迫不及待參加各式各樣的活動嗎?</h3>
-                                <span>您會得到超戶預期活動體驗!</span>
-                            </div>
-                            <a href="#" class="btn btn-call-to-act">立即註冊</a>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
+        <!-- 包含在footer -->
         <!-- ============================ Call To Action End ================================== -->
 
         <!-- ============================ Footer Start ================================== -->
         <footer id="footer"></footer>
-        <!-- <footer class="dark-footer skin-dark-footer">
-            <div>
-                <div class="container">
-                    <div class="row">
-                        <div class="footer-bottom">
-                            <div class="container">
-                                <div class="row align-items-center">
-
-                                    <div class="col-lg-6 col-md-6">
-                                        <p class="mb-0">© 2025 ChillChibe, All Rights Reserved</p>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-        </footer> -->
         <!-- ============================ Footer End ================================== -->
 
         <!-- Log In Modal -->
-        <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="registermodal" aria-hidden="true"></div>
-        <!-- <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="registermodal"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered login-pop-form" role="document">
-                <div class="modal-content" id="registermodal">
-                    <span class="mod-close" data-bs-dismiss="modal" aria-hidden="true">
-                        <span class="svg-icon text-primary svg-icon-2hx">
-                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <rect opacity="0.3" x="2" y="2" width="20" height="20" rx="10" fill="currentColor" />
-                                <rect x="7" y="15.3137" width="12" height="2" rx="1" transform="rotate(-45 7 15.3137)"
-                                    fill="currentColor" />
-                                <rect x="8.41422" y="7" width="12" height="2" rx="1" transform="rotate(45 8.41422 7)"
-                                    fill="currentColor" />
-                            </svg>
-                        </span>
-                    </span>
-                    <div class="modal-body">
-                        <h4 class="modal-header-title">Log In</h4>
-                        <div class="d-flex align-items-center justify-content-center mb-3">
-                            <span class="svg-icon text-primary svg-icon-2hx">
-                                <svg width="80" height="80" viewBox="0 0 24 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M15.8797 15.375C15.9797 15.075 15.9797 14.775 15.9797 14.475C15.9797 13.775 15.7797 13.075 15.4797 12.475C14.7797 11.275 13.4797 10.475 11.9797 10.475C11.7797 10.475 11.5797 10.475 11.3797 10.575C7.37971 11.075 4.67971 14.575 2.57971 18.075L10.8797 3.675C11.3797 2.775 12.5797 2.775 13.0797 3.675C13.1797 3.875 13.2797 3.975 13.3797 4.175C15.2797 7.575 16.9797 11.675 15.8797 15.375Z"
-                                        fill="currentColor" />
-                                    <path opacity="0.3"
-                                        d="M20.6797 20.6749C16.7797 20.6749 12.3797 20.275 9.57972 17.575C10.2797 18.075 11.0797 18.375 11.9797 18.375C13.4797 18.375 14.7797 17.5749 15.4797 16.2749C15.6797 15.9749 15.7797 15.675 15.7797 15.375V15.2749C16.8797 11.5749 15.2797 7.47495 13.2797 4.07495L21.6797 18.6749C22.2797 19.5749 21.6797 20.6749 20.6797 20.6749ZM8.67972 18.6749C8.17972 17.8749 7.97972 16.975 7.77972 15.975C7.37972 13.575 8.67972 10.775 11.3797 10.375C7.37972 10.875 4.67972 14.375 2.57972 17.875C2.47972 18.075 2.27972 18.375 2.17972 18.575C1.67972 19.475 2.27972 20.475 3.27972 20.475H10.3797C9.67972 20.175 9.07972 19.3749 8.67972 18.6749Z"
-                                        fill="currentColor" />
-                                </svg>
-                            </span>
-                        </div>
-                        <div class="login-form">
-                            <form>
-
-                                <div class="form-floating mb-3">
-                                    <input type="email" class="form-control" placeholder="name@example.com">
-                                    <label>Email address</label>
-                                </div>
-
-                                <div class="form-floating mb-3">
-                                    <input type="password" class="form-control" placeholder="Password">
-                                    <label>Password</label>
-                                </div>
-
-                                <div class="form-group mb-3">
-                                    <div class="d-flex align-items-center justify-content-between">
-                                        <div class="flex-shrink-0 flex-first">
-                                            <div class="form-check form-check-inline">
-                                                <input class="form-check-input" type="checkbox" id="save-pass"
-                                                    value="option1">
-                                                <label class="form-check-label" for="save-pass">Save Password</label>
-                                            </div>
-                                        </div>
-                                        <div class="flex-shrink-0 flex-first">
-                                            <a href="#" class="link fw-medium">Forgot Password?</a>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <button type="button"
-                                        class="btn btn-lg btn-primary fw-medium full-width rounded-2">LogIn</button>
-                                </div>
-
-                            </form>
-                        </div>
-                        <div class="modal-divider"><span>Or login via</span></div>
-                        <div class="social-login mb-3">
-                            <ul>
-                                <li><a href="#" class="btn connect-fb"><i class="ti-facebook"></i>Facebook</a></li>
-                                <li><a href="#" class="btn connect-google"><i class="ti-google"></i>Google+</a></li>
-                            </ul>
-                        </div>
-                        <div class="text-center">
-                            <p class="mt-4">Have't Any Account? <a href="create-account.html"
-                                    class="link fw-medium">Acreate An Account</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
+        <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="registermodal"
+            aria-hidden="true"></div>
         <!-- End Modal -->
 
         <a id="back2Top" class="top-scroll" title="Back to top" href="#"><i class="ti-arrow-up"></i></a>
