Revert "Merge branch 'ernie'"
This reverts commit f8b5762432a8ddc4ca99a27d3ec16c159f75b10f, reversing
changes made to 6964a2ac0a478149e97640fa741fff693b7b3588.

--- a/src/main/webapp/member/forgot-password.html
+++ b/src/main/webapp/member/forgot-password.html
@@ -131,25 +131,25 @@
 		<!-- All Jquery -->
 		<!-- ============================================================== -->
 		<!-- <script src="./_html/assets/js/jquery.min.js"></script> -->
-		<script src="../Full_Resido/_html/assets/js/jquery.min.js"></script>
+		<script src="./_html/assets/js/jquery.min.js"></script>
 		<!-- <script src="./_html/assets/js/popper.min.js"></script> -->
-		<script src="../Full_Resido/_html/assets/js/popper.min.js"></script>
+		<script src="./_html/assets/js/popper.min.js"></script>
 		<!-- <script src="./_html/assets/js/bootstrap.min.js"></script> -->
-		<script src="../Full_Resido/_html/assets/js/bootstrap.min.js"></script>
+		<script src="./_html/assets/js/bootstrap.min.js"></script>
 		<!-- <script src="./_html/assets/js/rangeslider.js"></script> -->
-		<script src="../Full_Resido/_html/assets/js/rangeslider.js"></script>
+		<script src="./_html/assets/js/rangeslider.js"></script>
 		<!-- <script src="./_html/assets/js/select2.min.js"></script> -->
-		<script src="../Full_Resido/_html/assets/js/select2.min.js"></script>
+		<script src="./_html/assets/js/select2.min.js"></script>
 		<!-- <script src="./_html/assets/js/jquery.magnific-popup.min.js"></script> -->
-		<script src="../Full_Resido/_html/assets/js/jquery.magnific-popup.min.js"></script>
+		<script src="./_html/assets/js/jquery.magnific-popup.min.js"></script>
 		<!-- <script src="./_html/assets/js/slick.js"></script> -->
-		<script src="../Full_Resido/_html/assets/js/slick.js"></script>
+		<script src="./_html/assets/js/slick.js"></script>
 		<!-- <script src="./_html/assets/js/slider-bg.js"></script> -->
-		<script src="../Full_Resido/_html/assets/js/slider-bg.js"></script>
+		<script src="./_html/assets/js/slider-bg.js"></script>
 		<!-- <script src="./_html/assets/js/lightbox.js"></script>  -->
-		<script src="../Full_Resido/_html/assets/js/lightbox.js"></script>
+		<script src="./_html/assets/js/lightbox.js"></script>
 		<!-- <script src="./_html/assets/js/imagesloaded.js"></script> -->
-		<script src="../Full_Resido/_html/assets/js/imagesloaded.js"></script>
+		<script src="./_html/assets/js/imagesloaded.js"></script>
 		 
 		<!-- <script src="./_html/assets/js/custom.js"></script> -->
 		<script src="../Full_Resido/_html/assets/js/custom.js"></script>
