commit for success api

--- a/src/main/webapp/chilltribe.html
+++ b/src/main/webapp/chilltribe.html
@@ -972,9 +972,8 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-7 col-md-10 text-center">
                         <div class="sec-heading center">
-                            <h2>Featured Property For Sale</h2>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-                                voluptatum deleniti atque corrupti quos dolores</p>
+                            <h2>即將截止活動</h2>
+                            <p>倒數計時，趕快參加！</p>
                         </div>
                     </div>
                 </div>
