update supplier register is OK

--- a/src/main/webapp/member/supplier-register.html
+++ b/src/main/webapp/member/supplier-register.html
@@ -17,6 +17,7 @@
 		<!-- <link href="../Full_Resido/_html/assets/css/index.css" rel="stylesheet"> -->
 		<link href="./css/index.css" rel="stylesheet">
 		
+		
     </head>
 	
     <body class="blue-skin">
@@ -96,7 +97,7 @@
 											<div class="col-lg-6 col-md-6 mb-3">
 												<div class="form-group">
 													<label>密碼</label>
-													<input type="password" class="form-control" id="passowrd" placeholder="*******">
+													<input type="password" class="form-control" id="password" placeholder="*******">
 												</div>
 											</div>
 											</tr>
