--- a/src/main/webapp/Full_Resido/single-activity.html
+++ b/src/main/webapp/Full_Resido/single-activity.html
@@ -667,10 +667,31 @@
 					console.log("從 Servlet 獲取的數據:", data); // 顯示在 console
 
 					// 更新 HTML 內容
-					// document.getElementById("event-category").innerText = data.category;
-					// document.getElementById("event-title").innerText = data.title;
-					// document.getElementById("event-location").innerText = data.location;
-					// document.getElementById("event-price").innerText = data.price;
+					document.getElementById("activityId").innerText = data.activityId;
+					document.getElementById("activityPrefix").innerText = data.activityPrefix;
+					document.getElementById("activityName").innerText = data.activityName;
+					document.getElementById("supplierId").innerText = data.supplierId;
+					document.getElementById("cityId").innerText = data.cityId;
+					document.getElementById("districtId").innerText = data.districtId;
+					document.getElementById("address").innerText = data.address;
+					document.getElementById("unitPrice").innerText = data.unitPrice;
+					document.getElementById("minParticipants").innerText = data.minParticipants;
+					document.getElementById("maxParticipants").innerText = data.maxParticipants;
+					document.getElementById("description").innerText = data.description;
+					document.getElementById("precaution").innerText = data.precaution;
+					document.getElementById("category").innerText = data.category;
+					document.getElementById("startDateTime").innerText = data.startDateTime;
+					document.getElementById("endDateTime").innerText = data.endDateTime;
+					document.getElementById("status").innerText = data.status;
+					document.getElementById("note").innerText = data.note;
+					document.getElementById("approved").innerText = data.approved;
+					document.getElementById("inventoryCount").innerText = data.inventoryCount;
+					document.getElementById("latitude").innerText = data.latitude;
+					document.getElementById("longitude").innerText = data.longitude;
+					document.getElementById("ticketsActivateTime").innerText = data.ticketsActivateTime;
+					document.getElementById("ticketsExpiredTime").innerText = data.ticketsExpiredTime;
+					document.getElementById("inventoryUpdateTime").innerText = data.inventoryUpdateTime;
+					document.getElementById("createTime").innerText = data.createTime;
 				})
 				.catch(error => console.error("獲取數據失敗:", error));
 		</script>
