test index dynamic picture failed

--- a/src/main/webapp/chilltribe.html
+++ b/src/main/webapp/chilltribe.html
@@ -1418,6 +1418,12 @@
     <!-- End Wrapper -->
     <!-- ============================================================== -->
     
+    <script src="vendors/jquery/jquery-3.7.1.min.js"></script>
+
+    <!-- 自己刻 -->
+    <script src="activity/js/index.js"></script>
+    <!-- 自己刻↑ -->
+
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
@@ -1431,9 +1437,7 @@
     <script src="Full_Resido/_html/assets/js/slider-bg.js"></script>
     <script src="Full_Resido/_html/assets/js/lightbox.js"></script>
     <script src="Full_Resido/_html/assets/js/imagesloaded.js"></script>
-    <!-- 自己刻 -->
-    <script src="activity/js/index.js"></script>
-    <!-- 自己刻↑ -->
+
     <script src="Full_Resido/_html/assets/js/custom.js"></script>
     <!-- ============================================================== -->
     <!-- This page plugins -->
