--- a/src/main/webapp/member/fixed-member-sidebar.html
+++ b/src/main/webapp/member/fixed-member-sidebar.html
@@ -8,9 +8,19 @@
     <div class="dashboard-navbar">
 
         <div class="d-user-avater">
+       
             <img src="https://placehold.co/500x500" class="img-fluid avater" alt="">
-            <h4>Adam Harshvardhan</h4>
-            <span>Canada USA</span>
+			<label for="upload-avatar" class="btn btn-primary mt-2">上傳圖片</label>
+            <input type="file" id="upload-avatar" class="d-none" accept="image/*" onchange="previewImage(event)">
+            <!-- Image preview -->
+            <div id="image-preview" class="mt-3">
+                <img id="preview" src="" alt="預覽圖片" class="img-fluid d-none">
+            </div>
+
+
+<!--             <h4>Adam Harshvardhan</h4> -->
+<!--             <span>Canada USA</span> -->
+				 
         </div>
 
         <!-- Navigation Start -->
@@ -138,3 +148,5 @@
         </div>
     </div>
 </div>
+
+
