--- a/src/main/webapp/member/footer.html
+++ b/src/main/webapp/member/footer.html
@@ -28,7 +28,7 @@
 						<div class="row align-items-center">
 
 							<div class="col-lg-6 col-md-6">
-								<p class="mb-0">© 2025 ChillChibe, All Rights Reserved</p>
+								<p class="mb-0">© 2025 ChillTribe, All Rights Reserved</p>
 							</div>
 
 						</div>
