update supplier account show name is ok

--- a/src/main/webapp/supplier/supplierIndexSidebar.html
+++ b/src/main/webapp/supplier/supplierIndexSidebar.html
@@ -111,7 +111,7 @@
       
 
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="./supplier_account.html" class="nav-link">
               <i class="bi bi-person-fill-gear"></i>
               <p>帳號/檔案管理</p>
             </a>
