--- a/src/main/webapp/member/fixed-member-sidebar.html
+++ b/src/main/webapp/member/fixed-member-sidebar.html
@@ -44,7 +44,7 @@
                             <div class="card-body pt-0">
                                 <div class="inner_widget_link">
                                     <ul class="no-ul-list navigation-list">
-                                        <li><a href="">個人資料</a></li>
+                                        <li><a href="./member-details.html">個人資料</a></li>
                                         <li><a href="">我的地址</a></li>
                                         <li><a href="">更改密碼</a></li>
                                     </ul>
