--- a/src/main/webapp/supplier/supplier_account.html
+++ b/src/main/webapp/supplier/supplier_account.html
@@ -1011,6 +1011,10 @@
 			username.value = supplier.supplier_name;
 			email.value = supplier.email;
 			phone.value = supplier.phone;
+			id_number.value = supplier.id_number;
+			contact_person.value = supplier.contact_person;
+			address.value = supplier.address;
+			about.value = supplier.about;
 			
 		});
 
