--- a/src/main/webapp/member/member-details.html
+++ b/src/main/webapp/member/member-details.html
@@ -233,6 +233,7 @@
 			date_of_birth.value = member.date_of_birth;
 			gender.value = member.gender;
 			member_id.value = member.member_id;
+			photo_base64.value = member.photo_base64;
 			
 		});
 
