--- a/src/main/webapp/supplier/update_activity.html
+++ b/src/main/webapp/supplier/update_activity.html
@@ -334,7 +334,7 @@
 <!-- AdminLTE App -->
 <script src="../admin/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="../admin/dist/js/demo.js"></script>
+<!-- <script src="../admin/dist/js/demo.js"></script> -->
 <!-- 客製化 Sidebar -->
 <script src="./js/supplierIndex.js"></script>
 
